--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,14 @@ log
 tmp.java
 .vscode
 
-# benchmarks/avrora/scratch/*
-# benchmarks/batik/scratch/*
-# benchmarks/fop/scratch/*
-# benchmarks/jython/scratch/*
-# benchmarks/luindex/scratch/*
-# benchmarks/lusearch/scratch/*
-# benchmarks/pmd/scratch/*
-# benchmarks/tomcat/scratch/*
-# benchmarks/xalan/scratch/*
-# benchmarks/dacapo-9.12-MR1-bach.jar
+benchmarks/avrora/scratch/*
+benchmarks/batik/scratch/*
+benchmarks/fop/scratch/*
+benchmarks/jython/scratch/*
+benchmarks/luindex/scratch/*
+benchmarks/lusearch/scratch/*
+benchmarks/pmd/scratch/*
+benchmarks/tomcat/scratch/*
+benchmarks/xalan/scratch/*
+benchmarks/dacapo-9.12-MR1-bach.jar
 
